--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "/wp-content/themes/houzez-child/react-app/",
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
