--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.20.0",
     "classnames": "^2.5.1",
     "node-sass": "^7.0.3",
+    "normalize.css": "^8.0.1",
     "panolens": "^0.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
